feat: warehosue product attribute